--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   </div>
   <div id="java" class="content-section">
     <ul>
-      <li><a href="Java_topics">Java Introduction</a></li>
+      <li><a href="java/Java_topics.html">Java Introduction</a></li>
     </ul>
 
   <script>
