--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <ul>
       <li><a href="java/Java_topics.html">Java Introduction</a></li>
     </ul>
-
+  </div>
   <script>
     function switchTab(tabId) {
       // Remove active class from all buttons
