--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
     <button onclick="switchTab('dbms')" class="active">DBMS Notes</button>
     <button onclick="switchTab('os')">OS Notes</button>
     <button onclick="switchTab('java')">Java Notes</button>
-
   </div>
 
   <div id="dbms" class="content-section active">
@@ -91,25 +90,41 @@
 
   <div id="os" class="content-section">
     <ul>
+      <li><a href="OS_NOTE/Boot Process_OS Architecture_Memory Hierarchy.html">Boot Process, OS Architecture & Memory Hierarchy</a></li>
       <li><a href="OS_NOTE/contigous_memory_management.html">Contiguous Memory Management</a></li>
       <li><a href="OS_NOTE/deadlock.html">Deadlock</a></li>
+      <li><a href="OS_NOTE/Introduction_And_Type_Of_OS.html">Introduction and Types of OS</a></li>
+      <li><a href="OS_NOTE/Multi-Tasking_Multi-Threading_Kernel_System_Calls.html">Multitasking, Kernel & System Calls</a></li>
       <li><a href="OS_NOTE/page_replacement.html">Page Replacement</a></li>
       <li><a href="OS_NOTE/Paging.html">Paging</a></li>
       <li><a href="OS_NOTE/Process Scheduling.html">Process Scheduling</a></li>
+      <li><a href="OS_NOTE/process_state_context.html">Process State & Context Switching</a></li>
       <li><a href="OS_NOTE/Process_Synchronization.html">Process Synchronization</a></li>
       <li><a href="OS_NOTE/Virtual_memory.html">Virtual Memory</a></li>
     </ul>
   </div>
+
   <div id="java" class="content-section">
     <ul>
-      <li><a href="java/Java_topics.html">Java Introduction</a></li>
+      <li><a href="java/Abstraction.html">Abstraction</a></li>
+      <li><a href="java/Constructors,Cloning,deep and shallow copy.html">Constructors, Cloning & Copy</a></li>
+      <li><a href="java/Exception Handling.html">Exception Handling</a></li>
+      <li><a href="java/inheritance.html">Inheritance</a></li>
+      <li><a href="java/introduction,class,object,access modifier,getter,setter and encapsulation.html">Intro, Class & Encapsulation</a></li>
+      <li><a href="java/Java Keywords.html">Java Keywords</a></li>
+      <li><a href="java/Java Memory Management.html">Java Memory Management</a></li>
+      <li><a href="java/Java_topics.html">Java Topics</a></li>
+      <li><a href="java/Polymorphism.html">Polymorphism</a></li>
+      <li><a href="java/Wrapper Classes and Why java is not full object oriantend.html">Wrapper Classes & Object Orientation</a></li>
     </ul>
   </div>
+
   <script>
     function switchTab(tabId) {
-      // Remove active class from all buttons
       document.querySelectorAll('.tabs button').forEach(btn => btn.classList.remove('active'));
-      // Add active class to clicked button
+      document.querySelectorAll('.content-section').forEach(section => section.classList.remove('active'));
+      document.getElementById(tabId).classList.add('active');
+
       if (tabId === 'dbms') {
         document.querySelector('.tabs button:nth-child(1)').classList.add('active');
       } else if (tabId === 'os') {
@@ -117,11 +132,6 @@
       } else {
         document.querySelector('.tabs button:nth-child(3)').classList.add('active');
       }
-
-      // Hide all sections
-      document.querySelectorAll('.content-section').forEach(section => section.classList.remove('active'));
-      // Show selected section
-      document.getElementById(tabId).classList.add('active');
     }
   </script>
 
