--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>📚 Notes Hub – DBMS & OS</title>
+  <title>📚 Notes Hub – DBMS, OS, Java & CN</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -66,58 +66,70 @@
 </head>
 <body>
 
-  <h1>📚 Notes Hub – DBMS & OS</h1>
+  <h1>📚 Notes Hub – DBMS, OS, Java & CN</h1>
 
   <div class="tabs">
     <button onclick="switchTab('dbms')" class="active">DBMS Notes</button>
     <button onclick="switchTab('os')">OS Notes</button>
     <button onclick="switchTab('java')">Java Notes</button>
+    <button onclick="switchTab('cn')">CN Notes</button>
   </div>
 
   <div id="dbms" class="content-section active">
-  <ul>
-    <li><a href="DBMS_NOTE/introduction_to_dbms.html">Introduction to DBMS</a></li>
-    <li><a href="DBMS_NOTE/Relational_Model.html">Relational Model</a></li>
-    <li><a href="DBMS_NOTE/Data_Model_ER_Diagram.html">Data Model & ER Diagram</a></li>
-    <li><a href="DBMS_NOTE/SQL_QUERY.html">SQL Queries</a></li>
-    <li><a href="DBMS_NOTE/DBMS_Indexing.html">DBMS Indexing</a></li>
-    <li><a href="DBMS_NOTE/DBMS_Normalization.html">DBMS Normalization</a></li>
-    <li><a href="DBMS_NOTE/transactions and concurrency.html">Transactions and Concurrency</a></li>
-    <li><a href="DBMS_NOTE/Serialization, Conflict Equivalence, Concurrency Protocols.html">Serialization & Concurrency Protocols</a></li>
-    <li><a href="DBMS_NOTE/recovery.html">Recovery</a></li>
-  </ul>
-</div>
+    <ul>
+      <li><a href="DBMS_NOTE/introduction_to_dbms.html">Introduction to DBMS</a></li>
+      <li><a href="DBMS_NOTE/Relational_Model.html">Relational Model</a></li>
+      <li><a href="DBMS_NOTE/Data_Model_ER_Diagram.html">Data Model & ER Diagram</a></li>
+      <li><a href="DBMS_NOTE/SQL_QUERY.html">SQL Queries</a></li>
+      <li><a href="DBMS_NOTE/DBMS_Indexing.html">DBMS Indexing</a></li>
+      <li><a href="DBMS_NOTE/DBMS_Normalization.html">DBMS Normalization</a></li>
+      <li><a href="DBMS_NOTE/transactions and concurrency.html">Transactions and Concurrency</a></li>
+      <li><a href="DBMS_NOTE/Serialization, Conflict Equivalence, Concurrency Protocols.html">Serialization & Concurrency Protocols</a></li>
+      <li><a href="DBMS_NOTE/recovery.html">Recovery</a></li>
+      <li><a href="DBMS_NOTE/Procedural SQL.html">Procedural SQL</a></li>
+    </ul>
+  </div>
 
   <div id="os" class="content-section">
-  <ul>
-    <li><a href="OS_NOTE/Introduction_And_Type_of_OS.html">Introduction and Types of OS</a></li>
-    <li><a href="OS_NOTE/Boot Process_OS Architecture_Memory Hierarchy.html">Boot Process, OS Architecture & Memory Hierarchy</a></li>
-    <li><a href="OS_NOTE/Multi-Tasking_Multi-Threading_Kernel_System_Calls.html">Multitasking, Kernel & System Calls</a></li>
-    <li><a href="OS_NOTE/process_state_context.html">Process State & Context Switching</a></li>
-    <li><a href="OS_NOTE/Process Scheduling.html">Process Scheduling</a></li>
-    <li><a href="OS_NOTE/Process_Synchronization.html">Process Synchronization</a></li>
-    <li><a href="OS_NOTE/deadlock.html">Deadlock</a></li>
-    <li><a href="OS_NOTE/contigous_memory_management.html">Contiguous Memory Management</a></li>
-    <li><a href="OS_NOTE/Paging.html">Paging</a></li>
-    <li><a href="OS_NOTE/page_replacement.html">Page Replacement</a></li>
-    <li><a href="OS_NOTE/Virtual_memory.html">Virtual Memory</a></li>
-  </ul>
-</div>
+    <ul>
+      <li><a href="OS_NOTE/Introduction_And_Type_of_OS.html">Introduction and Types of OS</a></li>
+      <li><a href="OS_NOTE/Boot Process_OS Architecture_Memory Hierarchy.html">Boot Process, OS Architecture & Memory Hierarchy</a></li>
+      <li><a href="OS_NOTE/Multi-Tasking_Multi-Threading_Kernel_System_Calls.html">Multitasking, Kernel & System Calls</a></li>
+      <li><a href="OS_NOTE/process_state_context.html">Process State & Context Switching</a></li>
+      <li><a href="OS_NOTE/Process Scheduling.html">Process Scheduling</a></li>
+      <li><a href="OS_NOTE/Process_Synchronization.html">Process Synchronization</a></li>
+      <li><a href="OS_NOTE/deadlock.html">Deadlock</a></li>
+      <li><a href="OS_NOTE/contigous_memory_management.html">Contiguous Memory Management</a></li>
+      <li><a href="OS_NOTE/Paging.html">Paging</a></li>
+      <li><a href="OS_NOTE/page_replacement.html">Page Replacement</a></li>
+      <li><a href="OS_NOTE/Virtual_memory.html">Virtual Memory</a></li>
+    </ul>
+  </div>
 
-<div id="java" class="content-section">
-  <ul>
-    <li><a href="java/introduction,class,object,access modifier,getter,setter and encapsulation.html">Intro, Class & Encapsulation</a></li>
-    <li><a href="java/Java Keywords.html">Java Keywords</a></li>
-    <li><a href="java/Constructors,Cloning,deep and shallow copy.html">Constructors, Cloning & Copy</a></li>
-    <li><a href="java/Inheritance.html">Inheritance</a></li>
-    <li><a href="java/Polymorphism.html">Polymorphism</a></li>
-    <li><a href="java/Abstraction.html">Abstraction</a></li>
-    <li><a href="java/Wrapper Classes and Why java is not full object orianted.html">Wrapper Classes & Object Orientation</a></li>
-    <li><a href="java/Java Memory Management.html">Java Memory Management</a></li>
-    <li><a href="java/Exception Handling.html">Exception Handling</a></li>
-    <li><a href="java/Java_topics.html">Java Topics</a></li>
-  </ul>
-</div>
+  <div id="java" class="content-section">
+    <ul>
+      <li><a href="java/introduction,class,object,access modifier,getter,setter and encapsulation.html">Intro, Class & Encapsulation</a></li>
+      <li><a href="java/Java Keywords.html">Java Keywords</a></li>
+      <li><a href="java/Constructors,Cloning,deep and shallow copy.html">Constructors, Cloning & Copy</a></li>
+      <li><a href="java/Inheritance.html">Inheritance</a></li>
+      <li><a href="java/Polymorphism.html">Polymorphism</a></li>
+      <li><a href="java/Abstraction.html">Abstraction</a></li>
+      <li><a href="java/Wrapper Classes and Why java is not full object orianted.html">Wrapper Classes & Object Orientation</a></li>
+      <li><a href="java/Java Memory Management.html">Java Memory Management</a></li>
+      <li><a href="java/Exception Handling.html">Exception Handling</a></li>
+      <li><a href="java/Java_topics.html">Java Topics</a></li>
+      <li><a href="java/IO Streams and File Handling.html">IO Streams & File Handling</a></li>
+      <li><a href="java/Relationships_Coupling.html">Relationships & Coupling</a></li>
+    </ul>
+  </div>
+
+  <div id="cn" class="content-section">
+    <ul>
+      <li><a href="CN/Introduction to Networking.html">Introduction to Networking</a></li>
+      <li><a href="CN/Network Devices.html">Network Devices</a></li>
+      <li><a href="CN/syllabus.html">Syllabus</a></li>
+    </ul>
+  </div>
 
   <script>
     function switchTab(tabId) {
@@ -129,8 +141,10 @@
         document.querySelector('.tabs button:nth-child(1)').classList.add('active');
       } else if (tabId === 'os') {
         document.querySelector('.tabs button:nth-child(2)').classList.add('active');
-      } else {
+      } else if (tabId === 'java') {
         document.querySelector('.tabs button:nth-child(3)').classList.add('active');
+      } else {
+        document.querySelector('.tabs button:nth-child(4)').classList.add('active');
       }
     }
   </script>
