--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
       <li><a href="DBMS_NOTE/Serialization, Conflict Equivalence, Concurrency Protocols.html">Serialization & Concurrency Protocols</a></li>
       <li><a href="DBMS_NOTE/recovery.html">Recovery</a></li>
       <li><a href="DBMS_NOTE/Procedural SQL.html">Procedural SQL</a></li>
+      <li><a href="DBMS_NOTE/Regular Expressions (REGEXP).html">Regular Expressions (REGEXP)</a></li>
+
     </ul>
   </div>
 
