--- a/CN/IP_Addressing_Subnetting.html
+++ b/CN/IP_Addressing_Subnetting.html
@@ -244,6 +244,7 @@
 
         <h2>3. Subnetting with CIDR</h2>
         <p><strong>What is Subnetting?</strong> Subnetting divides a large network into smaller networks (subnets) to save IP addresses, improve security, reduce network traffic, and organize devices.</p>
+        <img src="https://cdn.networkacademy.io/sites/default/files/2023-03/what-is-ip-subnetting.svg"/>
         <p><strong>What is CIDR?</strong> Classless Inter-Domain Routing uses a prefix (e.g., <code>/24</code>) to define the network portion of an IP address, replacing fixed classful sizes.</p>
         <h3>Detailed Subnetting Example</h3>
         <p><strong>Task:</strong> Divide <code>192.168.1.0/24</code> into 4 subnets.</p>
