--- a/index.html
+++ b/index.html
@@ -125,13 +125,18 @@
     </ul>
   </div>
 
-  <div id="cn" class="content-section">
-    <ul>
-      <li><a href="CN/Introduction to Networking.html">Introduction to Networking</a></li>
-      <li><a href="CN/Network Devices.html">Network Devices</a></li>
-      <li><a href="CN/syllabus.html">Syllabus</a></li>
-    </ul>
-  </div>
+ <div id="cn" class="content-section">
+  <ul>
+    <li><a href="CN/Introduction to Networking.html">Introduction to Networking</a></li>
+    <li><a href="CN/Network Devices.html">Network Devices</a></li>
+    <li><a href="CN/syllabus.html">Syllabus</a></li>
+    <li><a href="CN/Application_Layer_Protocols.html">Application Layer Protocols</a></li>
+    <li><a href="CN/IP_Addressing_Subnetting.html">IP Addressing & Subnetting</a></li>
+    <li><a href="CN/Networking_security.html">Networking Security</a></li>
+    <li><a href="CN/Transport_Layer_tcp_udp.html">Transport Layer (TCP/UDP)</a></li>
+  </ul>
+</div>
+
 
   <script>
     function switchTab(tabId) {
