--- a/DBMS_NOTE/mongodb.html
+++ b/DBMS_NOTE/mongodb.html
@@ -399,7 +399,11 @@
             <section id="key-concepts">
                 <h2>Key Concepts in MongoDB</h2>
                 <p>Here's what you need to know about MongoDB for an interview:</p>
-
+<img 
+  src="https://www.c-sharpcorner.com/article/approaching-mongodb-design-basic-principles/Images/data-storage.png" 
+  alt="MongoDB Data Storage Design"
+  style="max-width: 100%; height: auto; display: block; margin: 0 auto;" 
+/>
                 <ol>
                     <li><strong>Database</strong>: A container for collections. One MongoDB instance can have multiple databases.</li>
                     <li><strong>Collection</strong>: Similar to a table in SQL, but it holds documents. No fixed schema is required.</li>
