--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <li><a href="DBMS_NOTE/recovery.html">Recovery</a></li>
       <li><a href="DBMS_NOTE/Procedural SQL.html">Procedural SQL</a></li>
       <li><a href="DBMS_NOTE/Regular Expressions (REGEXP).html">Regular Expressions (REGEXP)</a></li>
-     
+      <li><a href="DBMS_NOTE/Window_Functions">Window_Functions</a></li>
       <li><a href=" DBMS_NOTE/mongodb.html">MongoDB</a></li>
 
     </ul>
