Save my local changes

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         document.querySelector('.tabs button:nth-child(2)').classList.add('active');
       } else if (tabId === 'java') {
         document.querySelector('.tabs button:nth-child(3)').classList.add('active');
-      } else {
+      } else if (tabId === 'cn') {
         document.querySelector('.tabs button:nth-child(4)').classList.add('active');
       }
     }
