--- a/index.html
+++ b/index.html
@@ -146,6 +146,10 @@
   <div id="react" class="content-section">
     <ul>
       <li><a href="react/interview_qeastion.html">React Interview Questions</a></li>
+      <li><a href="Qset1/interview_qeastion.html">React Interview Questions</a></li>
+      <li><a href="Qset2/interview_qeastion.html">React Interview Questions</a></li>
+      <li><a href="Qset3/interview_qeastion.html">React Interview Questions</a></li>
+
     </ul>
   </div>
 
