--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
   <div id="react" class="content-section">
     <ul>
       <li><a href="react/interview_qeastion.html">React Interview Questions</a></li>
-      <li><a href="react/Qset1">Questions set 1</a></li>
-      <li><a href="react/Qset2"> Questions set 2</a></li>
-      <li><a href="react/Qset3">Questions set 3</a></li>
+      <li><a href="react/Qset1.html">Questions set 1</a></li>
+      <li><a href="react/Qset2.html"> Questions set 2</a></li>
+      <li><a href="react/Qset3.html">Questions set 3</a></li>
 
     </ul>
   </div>
