--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
   <div id="react" class="content-section">
     <ul>
       <li><a href="react/interview_qeastion.html">React Interview Questions</a></li>
-      <li><a href="react/Qset1.html">Questions set 1</a></li>
+      <li><a href="react/QSet1.html">Questions set 1</a></li>
       <li><a href="react/Qset2.html"> Questions set 2</a></li>
       <li><a href="react/Qset3.html">Questions set 3</a></li>
 
