--- a/CN/Introduction to Networking.html
+++ b/CN/Introduction to Networking.html
@@ -592,7 +592,8 @@
             <img src="https://www.researchgate.net/publication/327483011/figure/fig2/AS:668030367436802@1536282259885/The-logical-mapping-between-OSI-basic-reference-model-and-the-TCP-IP-stack.jpg" alt="OSI vs TCP/IP Model"
                 style="width: 100%; border-radius: 15px; margin-top: 20px;">
 
-        
+                <img src="https://3.bp.blogspot.com/-HFmlFC1Hqwg/WTk1M14XmPI/AAAAAAAAC0Q/w_-S4sYYSt02DE1fJULROrzP8_jUl8eoQCLcB/s1600/Screen%2BShot%2B2017-06-08%2Bat%2B4.59.29%2BPM.png" alt="image" 
+                  style="width: 100%; border-radius: 15px; margin-top: 20px;">
             <div class="tip-box">
                 <ul>
                     <li>OSI is a theoretical model</li>
