--- a/DBMS_NOTE/introduction_to_dbms.html
+++ b/DBMS_NOTE/introduction_to_dbms.html
@@ -322,7 +322,7 @@
                 <li><strong>Database Languages:</strong> DDL, DML, DCL, TCL</li>
             </ul>
         </div>
-
+        <img src="https://www.includehelp.com/dbms/Images/database-languages.jpg" alt="dbms">
         <pre class="code-example">
 -- Database Languages Example
 -- DDL (Data Definition Language)
